# wacom-area-sizer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: Release.yml
src/wacom_area_sizer/: __init__.py
