[project]
name = "wacom-area-sizer"
version = "0.1.0"
description = "Update wacom tablet size with GUI"
authors = [
    { name = "hyrodium", email = "hyrodium@gmail.com" }
]
dependencies = [
    "PySide6>=6.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
was = "wacom_area_sizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wacom_area_sizer"]
