[project]
name = "wacom-area-sizer"
version = "0.1.1-dev"
description = "Update wacom tablet size with GUI"
authors = [
    { name = "hyrodium", email = "hyrodium@gmail.com" }
]
dependencies = [
    "PySide6>=6.7.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
was = "wacom_area_sizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wacom_area_sizer"]
